--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.myapplication'
+    namespace 'com.example.ceidflix'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "com.example.ceidflix"
         minSdk 21
         targetSdk 33
         versionCode 1
