--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_icon_your_company"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.Ceidflix">
         <activity
             android:name=".MainActivity"
             android:banner="@drawable/app_icon_your_company"
