--- a/code/CeidFlix/Ceidflix/pom.xml
+++ b/code/CeidFlix/Ceidflix/pom.xml
@@ -47,6 +47,10 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -69,7 +73,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.ceidflix/com.example.ceidflix.models.HelloApplication</mainClass>
+                            <mainClass>com.example.ceidflix/com.example.ceidflix.ceidFlix</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
